--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@popperjs/core": "^2.11.6",
-    "bootstrap": "^5.2.2",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "@popperjs/core": "2.11.6",
+    "@types/react": ">=16.14.8",
+    "bootstrap": "5.2.2",
+    "react": "18.2.0",
+    "react-bootstrap": "^2.6.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
