--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@fontsource/montserrat": "^4.5.13",
     "@popperjs/core": "2.11.6",
     "@types/react": ">=16.14.8",
     "bootstrap": "5.2.2",
