--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@fontsource/montserrat": "^4.5.13",
+    "@fontsource/montserrat": "4.5.13",
     "@popperjs/core": "2.11.6",
-    "@types/react": ">=16.14.8",
+    "@types/react": "18.0.25",
     "bootstrap": "5.2.2",
     "react": "18.2.0",
-    "react-bootstrap": "^2.6.0",
+    "react-bootstrap": "2.6.0",
+    "react-bootstrap-icons": "^1.9.1",
     "react-dom": "18.2.0",
-    "react-router-dom": "^6.4.3"
+    "react-router-dom": "6.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
