--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "private": true,
   "dependencies": {
     "@fontsource/montserrat": "4.5.13",
+    "@fortawesome/fontawesome-free": "^6.2.1",
     "@popperjs/core": "2.11.6",
     "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.9",
     "bootstrap": "5.2.2",
+    "bootstrap-css-only": "^4.4.1",
+    "cdbreact": "1.5.3",
+    "mdb-react-ui-kit": "5.0.0",
+    "mdbreact": "^5.2.0",
+    "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-bootstrap": "2.6.0",
-    "react-bootstrap-icons": "^1.9.1",
+    "react-bootstrap-icons": "1.10.2",
     "react-dom": "18.2.0",
     "react-router-dom": "6.4.3"
   },
